Editted index page and added css styling

--- a/src/main/resources/static/stylesheets/mainStylesheets.css
+++ b/src/main/resources/static/stylesheets/mainStylesheets.css
@@ -1,1 +1,4 @@
-body { font-family: 'Roboto', arial, serif; } /*font changer*/
+body {
+    font-family: 'Roboto', arial, serif;
+    background-color: #051622;
+}
