--- a/src/main/resources/templates/layouts/mainlayout.html
+++ b/src/main/resources/templates/layouts/mainlayout.html
@@ -11,27 +11,27 @@
     <script th:src="@{/webjars/jquery/3.6.0/jquery.min.js}"></script>
 </head>
 <body>
-    <nav class="navbar navbar-dark navbar-icon-top navbar-expand-lg bg-dark">
-        <a class="navbar-brand" href="#">Stormly</a>
+    <nav class="navbar sticky-top navbar-expand-sm navbar-dark bg-dark">
+        <a class="navbar-brand" href="/" style="padding-left: 12px">Stormly</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
+
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Current weather <span class="sr-only">(current)</span></a>
+                <li class="nav-item">
+                    <a class="nav-link" href="">Current weather <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Archive</a>
+                    <a class="nav-link" th:href="@{/archive}">Archive</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Pricing</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="#">Control Panel</a>
+                    <a class="nav-link disabled" th:href="@{/control-panel}">Control Panel</a>
                 </li>
             </ul>
-            
+            <form class="form-inline" th:action="@{/login}" style="margin-left: auto; padding-right: 12px">
+                <button class="btn btn-outline-success" type="submit">Login</button>
+            </form>
         </div>
     </nav>
 
