--- a/src/main/resources/templates/layouts/mainlayout.html
+++ b/src/main/resources/templates/layouts/mainlayout.html
@@ -4,15 +4,17 @@
     <meta charset="UTF-8">
     <title>Stormly-App</title>
     <!-- <link rel="shortcut icon" type="image/x-icon" th:href="@{/images/recipe-icon.png}"> -->
+    <script th:src="@{/webjars/jquery/3.6.0/jquery.min.js}"></script>
+    <script th:src="@{/webjars/bootstrap/5.1.0/js/bootstrap.min.js}"></script>
     <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.1.0/css/bootstrap.min.css}"/>
     <link rel="stylesheet" th:href="@{/stylesheets/mainStylesheets.css}"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto&display=swap">
-    <script th:src="@{/webjars/bootstrap/5.1.0/js/bootstrap.min.js}"></script>
-    <script th:src="@{/webjars/jquery/3.6.0/jquery.min.js}"></script>
 </head>
 <body>
     <nav class="navbar sticky-top navbar-expand-sm navbar-dark bg-dark">
-        <a class="navbar-brand" href="/" style="padding-left: 12px">Stormly</a>
+        <a class="navbar-brand" href="/" style="padding-left: 12px">
+            Stormly
+        </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -20,10 +22,18 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="">Current weather <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/">Current weather <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/archive}">Archive</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown"
+                       role="button" data-bs-toggle="dropdown" aria-expanded="false">About</a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" th:href="@{/about-stormly}">About Stormly</a></li>
+                        <li><a class="dropdown-item" th:href="@{/about-stormly/equipment}">Equipment</a></li>
+                    </ul>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link disabled" th:href="@{/control-panel}">Control Panel</a>
