--- a/src/main/resources/templates/archivePage.html
+++ b/src/main/resources/templates/archivePage.html
@@ -24,10 +24,10 @@
             </tbody>
         </table>
 
-        <button type="button" class="btn btn-outline-success">Day</button>
-        <button type="button" class="btn btn-outline-success">Week</button>
-        <button type="button" class="btn btn-outline-success">Month</button>
-        <button type="button" class="btn btn-outline-success">All</button>
+            <a class="btn btn-outline-success" type="submit" th:href="@{/archive/Day}">Day</a>
+            <a class="btn btn-outline-success" type="submit" th:href="@{/archive/Week}">Week</a>
+            <a class="btn btn-outline-success" type="submit" th:href="@{/archive/Month}">Month</a>
+            <a class="btn btn-outline-success" type="submit" th:href="@{/archive}">All</a>
     </div>
 </body>
 </html>
