--- a/src/main/resources/templates/archivePage.html
+++ b/src/main/resources/templates/archivePage.html
@@ -24,6 +24,7 @@
             </tbody>
         </table>
 
+            <a class="btn btn-outline-success" type="submit" th:href="@{/archive/Hour}">Hour</a>
             <a class="btn btn-outline-success" type="submit" th:href="@{/archive/Day}">Day</a>
             <a class="btn btn-outline-success" type="submit" th:href="@{/archive/Week}">Week</a>
             <a class="btn btn-outline-success" type="submit" th:href="@{/archive/Month}">Month</a>
