fixed wrong url on main page

--- a/src/main/resources/templates/layouts/mainlayout.html
+++ b/src/main/resources/templates/layouts/mainlayout.html
@@ -39,7 +39,7 @@
                     <a class="nav-link disabled" th:href="@{/control-panel}">Control Panel</a>
                 </li>
             </ul>
-            <form class="form-inline" th:action="@{/login}" style="margin-left: auto; padding-right: 12px">
+            <form class="form-inline" th:action="@{/user/login}" style="margin-left: auto; padding-right: 12px">
                 <button class="btn btn-outline-success" type="submit">Login</button>
             </form>
         </div>
