Added extra validation when logining/registering

--- a/src/main/resources/templates/archivePage.html
+++ b/src/main/resources/templates/archivePage.html
@@ -2,8 +2,8 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="~{layouts/mainlayout :: mainLayout(~{::body})}">
 
 <body>
-    <div class="container-fluid" style="margin-top: 25px" >
-        <table class="table table-hover table-striped" style="margin-bottom: 15px">
+    <div class="container" style="margin-left: auto; margin-right: auto">
+        <table class="table table-hover table-striped" style="margin-bottom: 15px; margin-top: 25px">
             <thead>
                 <tr>
                     <th>#</th>
