Added project's icon. Closes #14.

--- a/src/main/resources/templates/layouts/mainlayout.html
+++ b/src/main/resources/templates/layouts/mainlayout.html
@@ -9,10 +9,13 @@
     <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.1.0/css/bootstrap.min.css}"/>
     <link rel="stylesheet" th:href="@{/stylesheets/mainStylesheets.css}"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto&display=swap">
+    <link rel="shortcut icon" th:href="@{/Stormly_icon.ico}" type="image/x-icon" />
+
 </head>
 <body>
     <nav class="navbar sticky-top navbar-expand-sm navbar-dark bg-dark">
         <a class="navbar-brand" href="/" style="padding-left: 12px">
+            <img th:src="@{/Stormly_icon.ico}" width="30" height="30" alt="">
             Stormly
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
