--- a/src/main/resources/templates/mainPage.html
+++ b/src/main/resources/templates/mainPage.html
@@ -3,55 +3,170 @@
 
 <body>
     <link rel="stylesheet" th:href="@{/stylesheets/mainPageStylesheets.css}"/>
+    <link rel="stylesheet" th:href="@{/stylesheets/clockStyle.css}"/>
 
-    <div class="container-fluid col-md-6" style="margin-top: 50px; text-align: center">
-                        <div class="card card-weather">
-                            <div class="card-body">
-                                <div class="weather-date-location">
-                                    <h3>Friday</h3>
-                                    <p class="text-gray"> <span class="weather-date">25 November, 2021</span> <span class="weather-location">Gliwice, Polska</span> </p>
-                                </div>
-                                <div class="weather-data">
-                                    <div class="mr-auto">
-                                        <h4 class="display-3">32 <span class="symbol">°</span>C</h4>
-                                        <p> Cloudy </p>
+        <div class="container py-xl-5 ">
+
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="row d-flex justify-content-center align-items-center h-100" style="color: #282828;">
+                        <div class="col-md-10">
+
+                            <div class="card mb-4 gradient-custom" style="border-radius: 25px;">
+                                <div class="card-body p-4">
+
+                                    <div id="demo1" class="carousel slide" data-ride="carousel">
+                                        <!-- Indicators -->
+                                        <ul class="carousel-indicators mb-0">
+                                            <li data-target="#demo1" data-slide-to="0" class="active"></li>
+                                            <li data-target="#demo1" data-slide-to="1"></li>
+                                            <li data-target="#demo1" data-slide-to="2"></li>
+                                        </ul>
+                                        <!-- Carousel inner -->
+                                        <div class="carousel-inner">
+                                            <div class="carousel-item active">
+                                                <div class="d-flex justify-content-between mb-4 pb-2">
+                                                    <div>
+                                                        <h2 class="display-2"><strong>23°C</strong></h2>
+                                                        <p class="text-muted mb-0">Coimbra, Portugal</p>
+                                                    </div>
+                                                    <div>
+                                                        <img src="https://mdbootstrap.com/img/Photos/new-templates/bootstrap-weather/ilu3.png"
+                                                             width="150px">
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div>
-                                </div>
-                            </div>
-                            <div class="card-body p-0">
-                                <div class="d-flex weakly-weather">
-                                    <div class="weakly-weather-item">
-                                        <p class="mb-0"> Sun </p> <i class="mdi mdi-weather-cloudy"></i>
-                                        <p class="mb-0"> 30° </p>
-                                    </div>
-                                    <div class="weakly-weather-item">
-                                        <p class="mb-1"> Mon </p> <i class="mdi mdi-weather-hail"></i>
-                                        <p class="mb-0"> 31° </p>
-                                    </div>
-                                    <div class="weakly-weather-item">
-                                        <p class="mb-1"> Tue </p> <i class="mdi mdi-weather-partlycloudy"></i>
-                                        <p class="mb-0"> 28° </p>
-                                    </div>
-                                    <div class="weakly-weather-item">
-                                        <p class="mb-1"> Wed </p> <i class="mdi mdi-weather-pouring"></i>
-                                        <p class="mb-0"> 30° </p>
-                                    </div>
-                                    <div class="weakly-weather-item">
-                                        <p class="mb-1"> Thu </p> <i class="mdi mdi-weather-pouring"></i>
-                                        <p class="mb-0"> 29° </p>
-                                    </div>
-                                    <div class="weakly-weather-item">
-                                        <p class="mb-1"> Fri </p> <i class="mdi mdi-weather-snowy-rainy"></i>
-                                        <p class="mb-0"> 31° </p>
-                                    </div>
-                                    <div class="weakly-weather-item">
-                                        <p class="mb-1"> Sat </p> <i class="mdi mdi-weather-snowy"></i>
-                                        <p class="mb-0"> 32° </p>
-                                    </div>
+
                                 </div>
                             </div>
+
+                            <div class="card mb-4" style="border-radius: 25px;">
+                                <div class="card-body p-4">
+
+                                    <div id="demo2" class="carousel slide" data-ride="carousel">
+                                        <!-- Indicators -->
+                                        <ul class="carousel-indicators mb-0">
+                                            <li data-target="#demo2" data-slide-to="0"></li>
+                                            <li data-target="#demo2" data-slide-to="1" class="active"></li>
+                                            <li data-target="#demo2" data-slide-to="2"></li>
+                                        </ul>
+                                        <!-- Carousel inner -->
+                                        <div class="carousel-inner">
+                                            <div class="carousel-item active">
+                                                <div class="d-flex justify-content-around text-center mb-4 pb-3 pt-2">
+                                                    <div class="flex-column">
+                                                        <p class="small"><strong>21°C</strong></p>
+                                                        <i class="fas fa-sun fa-2x mb-3" style="color: #ddd;"></i>
+                                                        <p class="mb-0"><strong>12:00</strong></p>
+                                                        <p class="mb-0 text-muted" style="font-size: .65rem;">PM</p>
+                                                    </div>
+                                                    <div class="flex-column">
+                                                        <p class="small"><strong>2°C</strong></p>
+                                                        <i class="fas fa-sun fa-2x mb-3" style="color: #ddd;"></i>
+                                                        <p class="mb-0"><strong>1:00</strong></p>
+                                                        <p class="mb-0 text-muted" style="font-size: .65rem;">PM</p>
+                                                    </div>
+                                                    <div class="flex-column">
+                                                        <p class="small"><strong>20°C</strong></p>
+                                                        <i class="fas fa-cloud fa-2x mb-3" style="color: #ddd;"></i>
+                                                        <p class="mb-0"><strong>2:00</strong></p>
+                                                        <p class="mb-0 text-muted" style="font-size: .65rem;">PM</p>
+                                                    </div>
+                                                    <div class="flex-column">
+                                                        <p class="small"><strong>19°C</strong></p>
+                                                        <i class="fas fa-cloud fa-2x mb-3" style="color: #ddd;"></i>
+                                                        <p class="mb-0"><strong>3:00</strong></p>
+                                                        <p class="mb-0 text-muted" style="font-size: .65rem;">PM</p>
+                                                    </div>
+                                                    <div class="flex-column">
+                                                        <p class="small"><strong>18°C</strong></p>
+                                                        <i class="fas fa-cloud-showers-heavy fa-2x mb-3" style="color: #ddd;"></i>
+                                                        <p class="mb-0"><strong>4:00</strong></p>
+                                                        <p class="mb-0 text-muted" style="font-size: .65rem;">PM</p>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                </div>
+                            </div>
+
+                            <div class="card" style="border-radius: 25px;">
+                                <div class="card-body p-4">
+
+                                    <div id="demo3" class="carousel slide" data-ride="carousel">
+                                        <!-- Indicators -->
+                                        <ul class="carousel-indicators mb-0">
+                                            <li data-target="#demo3" data-slide-to="0"></li>
+                                            <li data-target="#demo3" data-slide-to="1"></li>
+                                            <li data-target="#demo3" data-slide-to="2" class="active"></li>
+                                        </ul>
+                                        <!-- Carousel inner -->
+                                        <div class="carousel-inner">
+                                            <div class="carousel-item active">
+                                                <div class="d-flex justify-content-around text-center mb-4 pb-3 pt-2">
+                                                    <div class="flex-column">
+                                                        <p class="small"><strong>21°C</strong></p>
+                                                        <i class="fas fa-sun fa-2x mb-3" style="color: #ddd;"></i>
+                                                        <p class="mb-0"><strong>Mon</strong></p>
+                                                    </div>
+                                                    <div class="flex-column">
+                                                        <p class="small"><strong>20°C</strong></p>
+                                                        <i class="fas fa-sun fa-2x mb-3" style="color: #ddd;"></i>
+                                                        <p class="mb-0"><strong>Tue</strong></p>
+                                                    </div>
+                                                    <div class="flex-column">
+                                                        <p class="small"><strong>16°C</strong></p>
+                                                        <i class="fas fa-cloud fa-2x mb-3" style="color: #ddd;"></i>
+                                                        <p class="mb-0"><strong>Wed</strong></p>
+                                                    </div>
+                                                    <div class="flex-column">
+                                                        <p class="small"><strong>17°C</strong></p>
+                                                        <i class="fas fa-cloud fa-2x mb-3" style="color: #ddd;"></i>
+                                                        <p class="mb-0"><strong>Thu</strong></p>
+                                                    </div>
+                                                    <div class="flex-column">
+                                                        <p class="small"><strong>18°C</strong></p>
+                                                        <i class="fas fa-cloud-showers-heavy fa-2x mb-3" style="color: #ddd;"></i>
+                                                        <p class="mb-0"><strong>Fri</strong></p>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                </div>
+                            </div>
+
                         </div>
-    </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="row d-flex justify-content-center" style="color: #282828;">
+                            <div class="clock">
+                                <div class="wrap">
+                                    <span class="hour"></span>
+                                    <span class="minute"></span>
+                                    <span class="second"></span>
+                                    <span class="dot"></span>
+                                </div>
+                            </div>
+                            <h2 class="card-title text-center d-flex mt-3 justify-content-center" style="-webkit-text-fill-color: white">
+                                <a><span class="badge hours"></span></a> :
+                                <a><span class="badge min"></span></a> :
+                                <a><span class="badge sec"></span></a>
+                            </h2>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    <script type="text/javascript" th:src="@{/js/clock.js}"></script>
+
 </body>
 </html>
 
