--- a/src/main/resources/static/stylesheets/clockStyle.css
+++ b/src/main/resources/static/stylesheets/clockStyle.css
@@ -21,10 +21,10 @@
     height: 100px;
     width: 6px;
     margin: auto;
-    top: -27%;
+    top: -28%;
     left: 0;
     bottom: 0;
-    right: 0;
+    right: 10%;
     background: black;
     transform-origin: bottom center;
     transform: rotate(0deg);
@@ -36,8 +36,9 @@
     position: absolute;
     height: 130px;
     width: 4px;
-    top: -38%;
+    top: -37%;
     left: 0;
+    right: 10%;
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.4);
     transform: rotate(90deg);
 }
@@ -50,7 +51,7 @@
     top: -26%;
     left: 0;
     bottom: 0;
-    right: 0;
+    right: 10%;
     border-radius: 4px;
     background: #FF4B3E;
     transform-origin: bottom center;
@@ -62,7 +63,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    right: 0;
+    right: 10%;
     bottom: 0;
     width: 12px;
     height: 12px;
