Changed main page's layout.

--- a/src/main/resources/templates/mainPage.html
+++ b/src/main/resources/templates/mainPage.html
@@ -16,23 +16,21 @@
                                 <div class="card-body p-4">
 
                                     <div id="demo1" class="carousel slide" data-ride="carousel">
-                                        <!-- Indicators -->
                                         <ul class="carousel-indicators mb-0">
                                             <li data-target="#demo1" data-slide-to="0" class="active"></li>
                                             <li data-target="#demo1" data-slide-to="1"></li>
                                             <li data-target="#demo1" data-slide-to="2"></li>
                                         </ul>
-                                        <!-- Carousel inner -->
+
                                         <div class="carousel-inner">
                                             <div class="carousel-item active">
                                                 <div class="d-flex justify-content-between mb-4 pb-2">
                                                     <div>
-                                                        <h2 class="display-2"><strong>23°C</strong></h2>
-                                                        <p class="text-muted mb-0">Coimbra, Portugal</p>
+                                                        <h2 class="display-2"><strong>2°C</strong></h2>
+                                                        <p class="text-muted mb-0">Gliwice, Poland</p>
                                                     </div>
                                                     <div>
-                                                        <img src="https://mdbootstrap.com/img/Photos/new-templates/bootstrap-weather/ilu3.png"
-                                                             width="150px">
+                                                        <i class="mdi mdi-weather-snowy-heavy" style="font-size: 80px"></i>
                                                     </div>
                                                 </div>
                                             </div>
@@ -46,43 +44,41 @@
                                 <div class="card-body p-4">
 
                                     <div id="demo2" class="carousel slide" data-ride="carousel">
-                                        <!-- Indicators -->
                                         <ul class="carousel-indicators mb-0">
                                             <li data-target="#demo2" data-slide-to="0"></li>
                                             <li data-target="#demo2" data-slide-to="1" class="active"></li>
                                             <li data-target="#demo2" data-slide-to="2"></li>
                                         </ul>
-                                        <!-- Carousel inner -->
                                         <div class="carousel-inner">
                                             <div class="carousel-item active">
                                                 <div class="d-flex justify-content-around text-center mb-4 pb-3 pt-2">
                                                     <div class="flex-column">
-                                                        <p class="small"><strong>21°C</strong></p>
-                                                        <i class="fas fa-sun fa-2x mb-3" style="color: #ddd;"></i>
+                                                        <p class="small"><strong>2°C</strong></p>
+                                                        <i class="mdi mdi-weather-snowy-heavy" style="font-size: 30px"></i>
                                                         <p class="mb-0"><strong>12:00</strong></p>
                                                         <p class="mb-0 text-muted" style="font-size: .65rem;">PM</p>
                                                     </div>
                                                     <div class="flex-column">
-                                                        <p class="small"><strong>2°C</strong></p>
-                                                        <i class="fas fa-sun fa-2x mb-3" style="color: #ddd;"></i>
+                                                        <p class="small"><strong>3°C</strong></p>
+                                                        <i class="mdi mdi-weather-snowy-heavy" style="font-size: 30px"></i>
                                                         <p class="mb-0"><strong>1:00</strong></p>
                                                         <p class="mb-0 text-muted" style="font-size: .65rem;">PM</p>
                                                     </div>
                                                     <div class="flex-column">
-                                                        <p class="small"><strong>20°C</strong></p>
-                                                        <i class="fas fa-cloud fa-2x mb-3" style="color: #ddd;"></i>
+                                                        <p class="small"><strong>3°C</strong></p>
+                                                        <i class="mdi mdi-weather-snowy-heavy" style="font-size: 30px"></i>
                                                         <p class="mb-0"><strong>2:00</strong></p>
                                                         <p class="mb-0 text-muted" style="font-size: .65rem;">PM</p>
                                                     </div>
                                                     <div class="flex-column">
-                                                        <p class="small"><strong>19°C</strong></p>
-                                                        <i class="fas fa-cloud fa-2x mb-3" style="color: #ddd;"></i>
+                                                        <p class="small"><strong>2°C</strong></p>
+                                                        <i class="mdi mdi-weather-snowy-rainy" style="font-size: 30px"></i>
                                                         <p class="mb-0"><strong>3:00</strong></p>
                                                         <p class="mb-0 text-muted" style="font-size: .65rem;">PM</p>
                                                     </div>
                                                     <div class="flex-column">
-                                                        <p class="small"><strong>18°C</strong></p>
-                                                        <i class="fas fa-cloud-showers-heavy fa-2x mb-3" style="color: #ddd;"></i>
+                                                        <p class="small"><strong>1°C</strong></p>
+                                                        <i class="mdi mdi-weather-snowy" style="font-size: 30px"></i>
                                                         <p class="mb-0"><strong>4:00</strong></p>
                                                         <p class="mb-0 text-muted" style="font-size: .65rem;">PM</p>
                                                     </div>
@@ -109,28 +105,28 @@
                                             <div class="carousel-item active">
                                                 <div class="d-flex justify-content-around text-center mb-4 pb-3 pt-2">
                                                     <div class="flex-column">
-                                                        <p class="small"><strong>21°C</strong></p>
-                                                        <i class="fas fa-sun fa-2x mb-3" style="color: #ddd;"></i>
+                                                        <p class="small"><strong>5°C</strong></p>
+                                                        <i class="mdi mdi-weather-cloudy" style="font-size: 30px"></i>
                                                         <p class="mb-0"><strong>Mon</strong></p>
                                                     </div>
                                                     <div class="flex-column">
-                                                        <p class="small"><strong>20°C</strong></p>
-                                                        <i class="fas fa-sun fa-2x mb-3" style="color: #ddd;"></i>
+                                                        <p class="small"><strong>7°C</strong></p>
+                                                        <i class="mdi mdi-weather-cloudy" style="font-size: 30px"></i>
                                                         <p class="mb-0"><strong>Tue</strong></p>
                                                     </div>
                                                     <div class="flex-column">
-                                                        <p class="small"><strong>16°C</strong></p>
-                                                        <i class="fas fa-cloud fa-2x mb-3" style="color: #ddd;"></i>
+                                                        <p class="small"><strong>7°C</strong></p>
+                                                        <i class="mdi mdi-weather-pouring" style="font-size: 30px"></i>
                                                         <p class="mb-0"><strong>Wed</strong></p>
                                                     </div>
                                                     <div class="flex-column">
-                                                        <p class="small"><strong>17°C</strong></p>
-                                                        <i class="fas fa-cloud fa-2x mb-3" style="color: #ddd;"></i>
+                                                        <p class="small"><strong>4°C</strong></p>
+                                                        <i class="mdi mdi-weather-snowy" style="font-size: 30px"></i>
                                                         <p class="mb-0"><strong>Thu</strong></p>
                                                     </div>
                                                     <div class="flex-column">
-                                                        <p class="small"><strong>18°C</strong></p>
-                                                        <i class="fas fa-cloud-showers-heavy fa-2x mb-3" style="color: #ddd;"></i>
+                                                        <p class="small"><strong>3°C</strong></p>
+                                                        <i class="mdi mdi-weather-snowy" style="font-size: 30px"></i>
                                                         <p class="mb-0"><strong>Fri</strong></p>
                                                     </div>
                                                 </div>
@@ -154,18 +150,33 @@
                                     <span class="dot"></span>
                                 </div>
                             </div>
-                            <h2 class="card-title text-center d-flex mt-3 justify-content-center" style="-webkit-text-fill-color: white">
+                            <h2 class="card-title text-center d-flex mt-3 justify-content-center" style="-webkit-text-fill-color: white; font-size: 40px">
                                 <a><span class="badge hours"></span></a> :
                                 <a><span class="badge min"></span></a> :
                                 <a><span class="badge sec"></span></a>
                             </h2>
-
+                        <div class="card" style="border-radius: 25px; width: 18rem">
+                            <div class="card-body p-4">
+                                <h2 class="d-flex flex-column card-title mt-2" style="font-size: 24px">
+                                    <div>
+                                        <i class="mdi mdi-weather-sunset-up"></i><span class="align-middle" style="padding-right: 65px; font-size: 16px"> 9:32</span>
+                                        <i class="mdi mdi-weather-sunset-down"></i><span class="align-middle" style="font-size: 16px"> 16:19</span>
+                                    </div>
+                                    <div>
+                                        <i class="mdi mdi-weather-hurricane"></i><span class="align-middle" style="padding-right: 30px; font-size: 16px"> 1012 hPa</span>
+                                        <i class="mdi mdi-sun-wireless-outline"></i><span class="align-middle" style="font-size: 16px"> 20 %</span>
+                                    </div>
+                                </h2>
+                            </div>
+                        </div>
                     </div>
+
                 </div>
             </div>
         </div>
 
     <script type="text/javascript" th:src="@{/js/clock.js}"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/6.5.95/css/materialdesignicons.min.css" integrity="sha512-Zw6ER2h5+Zjtrej6afEKgS8G5kehmDAHYp9M2xf38MPmpUWX39VrYmdGtCrDQbdLQrTnBVT8/gcNhgS4XPgvEg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 </body>
 </html>
