--- a/src/main/resources/static/stylesheets/mainPageStylesheets.css
+++ b/src/main/resources/static/stylesheets/mainPageStylesheets.css
@@ -7,10 +7,10 @@ body {
     background: #ffffff;
 
     /* Chrome 10-25, Safari 5.1-6 */
-    background: -webkit-linear-gradient(to right, rgba(255, 255, 255, 1), rgba(255, 236, 210, 1));
+    background: -webkit-linear-gradient(to right, rgba(255, 255, 255, 1), rgb(210, 238, 255));
 
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    background: linear-gradient(to right, rgba(255, 255, 255, 1), rgba(255, 236, 210, 1))
+    background: linear-gradient(to right, rgba(255, 255, 255, 1), rgb(210, 230, 255))
 }
 
 .carousel-indicators li {
