Added new iconed-statistics to main page layout.

--- a/src/main/resources/templates/mainPage.html
+++ b/src/main/resources/templates/mainPage.html
@@ -163,10 +163,15 @@
                                         <i class="mdi mdi-weather-sunset-down"></i><span class="align-middle" style="font-size: 16px"> 16:19</span>
                                     </div>
                                     <div>
-                                        <i class="mdi mdi-weather-hurricane"></i><span class="align-middle" style="padding-right: 30px; font-size: 16px"> 1012 hPa</span>
-                                        <i class="mdi mdi-sun-wireless-outline"></i><span class="align-middle" style="font-size: 16px"> 20 %</span>
+                                        <i class="mdi mdi-water"></i><span class="align-middle" style="padding-right: 67px; font-size: 16px"> 24%</span>
+                                        <i class="mdi mdi-thermometer"></i><span class="align-middle" style="font-size: 16px"> 3°C</span>
+                                    </div>
+                                    <div>
+                                        <i class="mdi mdi-gauge"></i><span class="align-middle" style="padding-right: 35px; font-size: 16px"> 1012hPa</span>
+                                        <i class="mdi mdi-sun-wireless-outline"></i><span class="align-middle" style="font-size: 16px"> 20%</span>
                                     </div>
                                 </h2>
+                                <span class="d-flex justify-content-center" style="font-size: 10px">Last update: 19:15 30/11/2021</span>
                             </div>
                         </div>
                     </div>
