Added font stylesheet for time indicators

--- a/src/main/resources/templates/mainPage.html
+++ b/src/main/resources/templates/mainPage.html
@@ -5,6 +5,8 @@
     <link rel="stylesheet" th:href="@{/stylesheets/mainPageStylesheets.css}"/>
     <link rel="stylesheet" th:href="@{/stylesheets/clockStyle.css}"/>
 
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
+
         <div class="container py-xl-5 ">
 
             <div class="row">
@@ -133,10 +135,8 @@
                                             </div>
                                         </div>
                                     </div>
-
                                 </div>
                             </div>
-
                         </div>
                     </div>
                 </div>
@@ -150,9 +150,9 @@
                                     <span class="dot"></span>
                                 </div>
                             </div>
-                            <h2 class="card-title text-center d-flex mt-3 justify-content-center" style="-webkit-text-fill-color: white; font-size: 40px">
-                                <a><span class="badge hours"></span></a> :
-                                <a><span class="badge min"></span></a> :
+                            <h2 class="card-title text-center d-flex mt-3 justify-content-center" style="-webkit-text-fill-color: white; font-size: 50px; font-family: 'Open Sans Condensed', sans-serif;">
+                                <a><span class="badge hours"></span></a>:
+                                <a><span class="badge min"></span></a>:
                                 <a><span class="badge sec"></span></a>
                             </h2>
                         <div class="card" style="border-radius: 25px; width: 18rem">
